# Aersp424_HW1

./: CMakeLists.txt  Homework1Notes.txt  Pilot.cpp  Pilot.h  Plane.cpp  Plane.h  Problem1.cpp  Problem2.cpp  Problem4.cpp  Problem5.cpp  Problem7.cpp  README.md  fuelChange.cpp  fuelChange.h  main.cpp
Problem2/: CMakeLists.txt
